test/link/ldh-bad.out
error: Address $1234 for LDH is not in HRAM range
    at ldh-bad.asm(2)
Linking failed with 1 error
